openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linux-skill-assessment
  namespace: faslasherin-dev
  labels:
    app: linux-skill-assessment
    app.kubernetes.io/component: linux-skill-assessment
    app.kubernetes.io/instance: linux-skill-assessment
    app.kubernetes.io/name: linux-skill-assessment
    app.kubernetes.io/part-of: linux-skill-assessment-app
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: linux-skill-assessment
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: linux-skill-assessment
        deployment: linux-skill-assessment
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/faslasherin-dev/linux-skill-assessment@sha256:5606c324afe6c4e70e3b96f826b2aefa2a8acd9e39258d26e538087aca7b25d8
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 5
        name: linux-skill-assessment
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 32Mi
        startupProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
